deploy/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: intelligent-backoffice-api
  namespace: intelligent-backoffice
spec:
  selector:
    app.kubernetes.io/name: intelligent-backoffice-api
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
